[package]
name = "minecraft-discord-rcon"
version = "0.1.0"
authors = ["Edwin Svensson <minecraft-discord-rcon@olback.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = [ "full" ] }
#discord = "0.8"
discord = { git = "https://github.com/SpaceManiac/discord-rs", default-features = false }
rcon = "0.4"
serde = { version = "1.0", features = [ "derive" ] }
toml = "0.5"
